--- a/package.json
+++ b/package.json
@@ -5,31 +5,35 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:migrate": "prisma migrate dev --name init"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@types/cookie": "^0.6.0",
     "@types/imap": "^0.8.42",
     "@types/nodemailer": "^7.0.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
-    "firebase": "^12.2.1",
-    "firebase-admin": "^13.5.0",
     "google-auth-library": "^10.3.0",
     "googleapis": "^158.0.0",
     "imap": "^0.8.19",
     "imapflow": "^1.0.195",
+    "iron-session": "^8.0.4",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.441.0",
     "mailparser": "^3.7.4",
     "next": "14.2.5",
-    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "socket.io": "^4.8.1",
     "tailwind-merge": "^3.3.1",
+    "tinymce": "^6.8.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -40,6 +44,7 @@
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
   }
