--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
-    "prisma:migrate": "prisma migrate dev --name init"
+    "prisma:migrate": "prisma migrate dev --name init",
+    "migrate:json": "tsx scripts/migrate-json-to-db.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
