--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie": "^1.0.2",
     "google-auth-library": "^10.3.0",
     "googleapis": "^158.0.0",
+    "iconv-lite": "^0.7.0",
     "imap": "^0.8.19",
     "imapflow": "^1.0.195",
     "iron-session": "^8.0.4",
