fix: Permissions factures pour Assistant/Financier + Logo ICONES pour Electron - Ajout roles Assistant, Assistante, Financier, Comptable dans Sidebar - Nouveau role Financier dans permissions API - Logo ICONES dans splash screen - Icone .ico pour Windows

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
           "arch": ["x64"]
         }
       ],
-      "icon": "electron/icon.png",
+      "icon": "electron/icon.ico",
       "signAndEditExecutable": false
     },
     "nsis": {
