Ajout roles DAF et Juridique RH - Categories tresorerie ALL IN ONE

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
     "electron:build": "npm run build && electron-builder",
     "electron:build:win": "npm run build && electron-builder --win",
+    "electron:build:mac": "npm run build && electron-builder --mac",
+    "electron:build:all": "npm run build && electron-builder --win --mac",
     "electron:build:portable": "npm run build && electron-builder --win portable",
     "electron:full-build": "npm run build && node scripts/prepare-electron.js && electron-builder --win"
   },
@@ -55,6 +57,28 @@
     },
     "portable": {
       "artifactName": "ICONES-Gestion-Portable.exe"
+    },
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        },
+        {
+          "target": "zip",
+          "arch": ["x64", "arm64"]
+        }
+      ],
+      "icon": "electron/icon.png",
+      "category": "public.app-category.business",
+      "artifactName": "ICONES-Gestion-${version}-${arch}.${ext}"
+    },
+    "dmg": {
+      "title": "ICONES Gestion",
+      "contents": [
+        { "x": 130, "y": 220 },
+        { "x": 410, "y": 220, "type": "link", "path": "/Applications" }
+      ]
     }
   },
   "dependencies": {
